# skryver

./: .gitignore  Cargo.toml  LICENSE  README.md  findings.md  implementation_plan.md  instruction.md  progress.md  skryver.dict.txt  tasks.json  whispr.dict.txt
bench/: bench_asr.py  results.json  results.md
crates/skryver-app/: Cargo.toml  tauri.conf.json
crates/skryver-app/capabilities/: default.json
crates/skryver-app/src/: main.rs  pipeline.rs
crates/skryver-app/ui/: index.html
crates/skryver-cli/: Cargo.toml
crates/skryver-cli/src/: main.rs
crates/skryver-core/: Cargo.toml
crates/skryver-core/src/: asr.rs  inject.rs  lib.rs  llm.rs  postproc.rs
crates/whispr-app/: Cargo.toml  tauri.conf.json
crates/whispr-app/capabilities/: default.json
crates/whispr-app/src/: main.rs  pipeline.rs
crates/whispr-app/ui/: index.html
crates/whispr-cli/: Cargo.toml
crates/whispr-cli/src/: main.rs
crates/whispr-core/: Cargo.toml
crates/whispr-core/src/: asr.rs  audio.rs  hotkey.rs  inject.rs  lib.rs  llm.rs  postproc.rs
design/landing/: Xenon.html  index.html
design/mockups/: codex.html  murmur.html  quill.html  sotto.html
docs/: index.html
research/: complaints-and-competitors.md  local-asr-stacks.md  wispr-flow-architecture.md
scripts/: package.ps1
tools/llama/: .gitignore
