[package]
name = "skryver-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "skryver"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
skryver-core = { path = "../skryver-core" }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
