[package]
name = "skryver-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sherpa-rs = { version = "0.6.8", default-features = false, features = ["download-binaries"] }
cpal = "0.18"
arboard = "3"
anyhow = "1"
ureq = { version = "2", features = ["json"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
